# Global-Flights-Data-Pipeline

./: .env.template  .gitignore  CHANGELOG.md  Makefile  README.md  requirements.txt
dagster/: setup.py  workspace.yaml
dagster/flights_dagster/: README.md  __init__.py  jobs.py  pyproject.toml  schedules.py  setup.cfg  setup.py
dagster/flights_dagster/assets/: dbt.py  ingestion.py
dagster/flights_dagster/flights_dagster/: assets.py  definitions.py
dbt/flights_dbt/: dbt_project.yml
dbt/flights_dbt/models/: airports_enriched.sql  fact_flights.sql  flights_cleaned.sql  flights_enriched.sql  old_flight_facts.sql  schema.yml
dbt/flights_dbt/models/airline_stats/: avg_flight_duration_per_airline.sql
dbt/flights_dbt/models/dimensions/: dim_airlines.sql  dim_airports.sql  dim_dates.sql
dbt/flights_dbt/tests/: flight_duration_non_negative.sql
docker/: docker-compose.yml  postgres-compose.yml
etl/: load_to_postgres.py
etl/cli/: main.py
etl/config/: settings.py
etl/ingestion/: reader.py
etl/loaders/: postgres.py
etl/logging/: setup.py
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: pipeline.json  system.json
notebooks/: data_exploration_01.ipynb
tests/integration/: test_pipeline.py
tests/observability/: test_dashboards.py
tests/unit/: test_loaders.py  test_reader.py
