[project]
name = "flights_dagster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "flights_dagster.definitions"
code_location_name = "flights_dagster"

[tool.setuptools.packages.find]
where = ["."]
include = ["flights_dagster*"]
exclude = ["flights_dagster_tests"]
